Change Project Name
Change project name from 'Elective Course Enrollment System' to 'Course Enrollment System'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elective-course-enrollment",
+  "name": "ssp-course-enrollment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
