Add Enrollment Time Setting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.14.2",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-neumorphic-toggle": "^1.0.1",
